# image-difference

./: .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/api/: routes.py
backend/src/services/: image_processing.py
backend/test/: test_main.py  test_services.py
frontend/: Dockerfile
frontend/id image diffrentiator/: package.json
frontend/id image diffrentiator/src/: App.tsx
