[tool.poetry]
name = "id-image-defferentiator"
version = "0.1.0"
description = "api to diffrentiate ID or passsport images"
authors = ["gideonmandu <gideonmandu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.72.0"
numpy = "^1.22.1"
opencv-python = "^4.5.5"
Pillow = "^9.0.0"
tesserocr = "^2.5.2"
rich = "^11.0.0"
pytesseract = "^0.3.8"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
tox = "^3.24.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
