[tool.poetry]
name = "id-image-defferentiator"
version = "0.1.0"
description = "api to diffrentiate ID or passsport images"
authors = ["gideonmandu <gideonmandu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.73.0"
numpy = "^1.22.1"
opencv-python = "^4.5.5"
tesserocr = "^2.5.2"
rich = "^11.0.0"
pytesseract = "^0.3.8"
python-multipart = "^0.0.5"
uvicorn = "^0.17.0"
keras-ocr = "^0.8.9"
easyocr = "^1.4.1"
imgaug = "^0.4.0"
tensorflow = "^2.7.0"
opencv-python-headless= "4.5.4.60"
pandas = "^1.4.0"


[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
tox = "^3.24.5"
httpx = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
